# tauri-vite-vue-template

./: .eslintrc-auto-import.json  .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.vue  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Greet.vue  TitleBar.vue
src/router/: routes.ts
src/stores/: index.ts
src/views/: Tauri.vue
